corrected spacing issue on products pg

--- a/_includes/sass/modules/_tile.scss
+++ b/_includes/sass/modules/_tile.scss
@@ -46,6 +46,10 @@
 .tile.vertical {
   position: relative;
 
+  & > h3 {
+    margin-top: 0.5em;
+  }
+
   &.more a {
     @include rem(font-size, 13px);
     @include rem(padding, 12px 24px 12px 12px);
